[package]
name = "feather-f405"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.6" }
cortex-m-rt = { version = "0.6" }
embedded-hal = "0.2.3"
panic-halt = "0.2.0"
cortex-m-semihosting = {version = "0.3.5" }
usb-device = "0.2.5"
usbd-serial = "0.1.0"

[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
features = ["rt", "stm32f405", "usb_fs"]

[dev-dependencies]
smart-leds = "0.3.0"
ws2812-timer-delay = "0.3.0"

[profile.release]
lto             = true
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 's'

[profile.dev]
lto             = true
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 0
