[package]
name = "feather-f405"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/jkristell/feather-f405"
keywords = [
    "arm",
    "cortex-m",
    "stm32f405",
    "feather",
    "template",
]
categories = [
    "embedded",
    "no-std",
]

[dependencies]
cortex-m = { version = "0.6" }
cortex-m-rt = { version = "0.6" }
embedded-hal = "0.2.3"
embedded-sdmmc = "0.3.0"
spi-memory = "0.2.0"
smart-leds = "0.3.0"
ws2812-timer-delay = "0.3.0"

[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
rev = "7b619fa3f"
features = ["rt", "stm32f405", "usb_fs"]

[dev-dependencies]
usb-device = "0.2.5"
usbd-serial = "0.1.0"
rtt-target = {version = "0.2", features = ["cortex-m"]}
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
usbd_scsi = "0.1.0"
usbd_mass_storage = "0.1.0"

[profile.release]
lto             = true
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 's'

[profile.dev]
lto             = true
debug           = true
incremental     = false
codegen-units   = 1
opt-level       = 0
