[package]
name = "feather-f405"
description = "Board support package for the Adafruit feather f405"
version = "0.2.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jkristell/feather-f405"
keywords = [
    "arm",
    "cortex-m",
    "stm32f405",
    "feather",
    "template",
]
categories = [
    "embedded",
    "no-std",
]

[dependencies]
stm32f4xx-hal = { path = "../stm32f4xx-hal", features = ["rt", "stm32f405", "usb_fs", "sdio", "sdio-host"] }
cortex-m = { version = "0.7" }
cortex-m-rt = { version = "0.7" }
embedded-hal = "0.2"
embedded-sdmmc = "0.3.0"
spi-memory = "0.2"
smart-leds = "0.3"
ws2812-timer-delay = "0.3"

[dev-dependencies]
usb-device = "0.2"
usbd-serial = "0.1"
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
usbd_scsi = "0.1"
usbd_mass_storage = "0.1"

[profile.release]
lto = true
debug = true
incremental = false
codegen-units = 1
opt-level = 's'

[profile.dev]
lto = true
debug = true
incremental = false
codegen-units = 1
opt-level = 0
